--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "nodemon": "^1.18.6",
     "socket.io": "^2.1.1"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app"
   },
   "keywords": [],
   "author": "",
